# surfaceseal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  requirements-video.txt
.github/workflows/: ci.yml  gitleaks.yml
docs/adr/: ADR-0001-prior-art-and-scope.md  ADR-0002-diff-and-baseline-modes.md  ADR-0003-deterministic-core-llm-optional.md  ADR-0004-core-packs-two-layer.md
docs/demo-viewer/: index.html
scripts/: produce_video.py
src/surfaceseal/: __init__.py  allowlist.py  cli.py  gitdiff.py  surfaces.py  surfaces.toml
src/surfaceseal/core/: __init__.py  baseline.py  engine.py  models.py
src/surfaceseal/packs/: __init__.py  autorun.py  injection.py
src/surfaceseal/parsers/: __init__.py  jsonc.py
src/surfaceseal/report/: __init__.py  pretty.py  sarif.py
src/surfaceseal/rules/: __init__.py  autorun_rules.py  injection_rules.py
tests/: test_autorun.py  test_baseline.py  test_evasions.py  test_exclude.py  test_injection.py  test_jsonc.py  test_miasma_integration.py  test_models.py  test_report_encoding.py  test_sarif.py  test_surfaces.py
tests/fixtures/miasma-scenario/: README.md
tests/fixtures/miasma-scenario/clean/.claude/: settings.json
tests/fixtures/miasma-scenario/poisoned/.claude/: settings.json
