[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surfaceseal"
version = "0.1.0"
description = "Security merge gate for AI coding-agent control surfaces. Diff-aware, deterministic, local-first. Catches poisoned hooks / autorun / injected instructions before they ship."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "leagames0221-sys" }]
keywords = ["ai-agents", "supply-chain-security", "claude-code", "mcp", "ci", "merge-gate", "prompt-injection"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

# Zero runtime dependencies (K-1 / C-1). Every addition requires an ADR.
# Minimum supply-chain exposure: the security tool must not itself widen the attack surface.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
surfaceseal = "surfaceseal.cli:main"

[project.urls]
Homepage = "https://github.com/leagames0221-sys/surfaceseal"

[tool.hatch.build.targets.wheel]
packages = ["src/surfaceseal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Detection signatures are regex literals that do not read well when wrapped.
"src/surfaceseal/rules/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
